--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
                            <button class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input type="number" min="0" class="form-control text-center" value="1">
-                           <button class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <input id="iphn-q" type="number" min="0" class="form-control text-center" value="1">
+                           <button id="iphn-plus" class="btn btn-default"><i class="fas fa-plus"></i></button>
                         </div>
-                        <h5>$1219</h5>
+                        <h5 id="price">$1219</h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -79,6 +79,7 @@
          </div>
       </div>
    </section>
+   <script src="app.js"></script>
 </body>
- <p>shanto</p>
+
 </html>
