--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
                            <button class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input id="iphn-q" type="number" min="0" class="form-control text-center" value="1">
-                           <button id="iphn-plus" class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <input id="iphn-q" type="number" min="0" class="form-control text-center" value="5">
+                           <button onclick="pp()" class="btn btn-default"><i class="fas fa-plus"></i></button>
                         </div>
-                        <h5 id="price">$1219</h5>
+                        <h5 id="price">1219</h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -46,15 +46,15 @@
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
                            <button class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input type="number" min="0" class="form-control text-center" value="1">
-                           <button class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <input id="case-number" type="number" min="0" class="form-control text-center" value="1">
+                           <button id="case-plus" class="btn btn-default"><i class="fas fa-plus"></i></button>
 
                         </div>
-                        <h5>$59</h5>
+                        <h5>$<span id="case-price">59</span> </h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
-               </div>
+               </div>app.js
 
                <div class="cart-item">
                   <div class="row">
