--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
                            <button class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input id="iphn-q" type="number" min="0" class="form-control text-center" value="5">
+                           <input id="iphn-q" type="number" min="0" class="form-control text-center" value="1">
                            <button onclick="pp()" class="btn btn-default"><i class="fas fa-plus"></i></button>
                         </div>
                         <h5 id="price">1219</h5>
@@ -45,7 +45,7 @@
                      </div>
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button class="btn btn-default"><i class="fas fa-minus"></i></button>
+                           <button id="case-minus" class="btn btn-default"><i class="fas fa-minus"></i></button>
                            <input id="case-number" type="number" min="0" class="form-control text-center" value="1">
                            <button id="case-plus" class="btn btn-default"><i class="fas fa-plus"></i></button>
 
@@ -66,7 +66,7 @@
                      </div>
 
                      <div class="col-md-4 status">
-                        <h5>$1,278</h5>
+                        <h5>$ <span id="sub-total">1278</span> </h5>
                         <h5>$0</h5>
                         <h5>$1,278</h5>
                      </div>
