--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                            <input id="phone-number" type="number" min="0" class="form-control text-center" value="1">
                            <button id="phone-plus" class="btn btn-default"><i class="fas fa-plus"></i></button>
                         </div>
-                        <h5 >$<span id="phone-total"id="price">1219</spa></h5>
+                        <h5 >$<span id="phone-total" >1219</spa></h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -50,7 +50,7 @@
                            <button id="case-plus" class="btn btn-default"><i class="fas fa-plus"></i></button>
 
                         </div>
-                        <h5>$<span id="case-price">59</span> </h5>
+                        <h5>$<span id="case-total">59</span> </h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -79,7 +79,7 @@
          </div>
       </div>
    </section>
-   <script src="newApp.js"></script>
+   <script src="nApp.js"></script>
 </body>
 
 </html>
