--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
          </div>
       </div>
    </section>
-   <script src="nApp.js"></script>
+   <script src="finalApp.js"></script>
 </body>
 
 </html>
